--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
 
             <div id="main">
             <h2>Home Page</h2>
-            <p>bla blabalblablabalbhhgusgbsbgoebgoebsgobesgonesogneogbogbjsbgjosebngojsebn
-                gdgdgdgdggdsgdsgsdgdsgdsgdsgsdgsdgsgdsgdsgdsgdsgdsgdsgdsgdsgdsgsgdsgdsgds
-                sgsdgdsgdsgdsgdsgdsgdgdsgdsgdsgdsgsgsgdsgdsgdsgsgsgdsgdsgdsgsgdgsgsgdsgd
-                kjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjkjjkmnknljnjnjnjkn
-                jbhfnbkndsNHKnensihkslnkhlnrklnhklnfkdnhkfnkhkndknklklfdklnhlnfklnklnkkl
+            <p>Who is J.L Freeza? 
+          
             </p>
             
             <img src="rainbowcow.jpeg"/>
