--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
             <div id="main">
             <h2>Home Page</h2>
-            <p>Who is J.L Freeza? 
+            <p> J.L Freeza is a rapper/ singer who has only just started his career.
           
             </p>
             
