--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <title> J.L FREEZA.com</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="icon" href="J.L freeza3.png" type="image/icon type">
     </head>
     <body>
         <div id="container">
@@ -21,8 +22,7 @@
 
             <div id="main">
             <h2>Home Page</h2>
-            <p> J.L Freeza is a rapper/ singer who has only just started his career.
-          
+            <p>J.L Freeza is a rapper/ singer who has only just started his career.
             </p>
             
             <img src="rainbowcow.jpeg"/>
