--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <div id="main">
             <h2>Home Page</h2>
-            <p>J.L Freeza is a rapper/ singer who has only just started his career.
+            <p>J.L Freeza is a rapper/ singer who has only just started his career. His music is going to be on spotify.
             </p>
             
             <img src="rainbowcow.jpeg"/>
