--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
         bfdbfdbfdjnbjnfdblknfdklbnfdknbfdbnfknfdlkbnkfdlnbdkbkfnbklfnbklfnnfdkbndfknbk
     </p>
          
-                <img src="
+                <img src="Andrew baby welcome to family.png"/>
+                <img src="I miss the old crazy.png"/>
+                <img src="pov ryland.png"/>
+                <img src="Andrew mugshot1.png"/>
                 
                 <p> bla blabalblablabalbhhgusgbsbgoebgoebsgobesgonesogneogbogbjsbgjosebngojsebn
                 gdgdgdgdggdsgdsgsdgdsgdsgdsgsdgsdgsgdsgdsgdsgdsgdsgdsgdsgdsgdsgsgdsgdsgds
