--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h3>Navigation</h3>
                 <ul>
                     <li><a class="selected" href="">Home</a></li>
-                      <a href="Pictures.html">pictures</a>
+                      <a href="pictures.html">pictures</a>
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
