--- a/pictures.html
+++ b/pictures.html
@@ -1,15 +1,22 @@
 <html>
-  <head>
-    <title? J.L FREEZA/PICTURES</title>
-  </head>
-  <body>
-    <h1> Pictures!</h1>
-  </body>
-  <p> 
-    <img src="andrew baby welcome to family.png"/>
+<head>
+   <title>J.L Freeza/Pictures</title>
+</head>
+<body>
+    Pictures!
+</body>
+<p>
+    <img src="Andrew baby welcome to family.png"/>
     <hr/>
-  <img src="pov ryland.png"/>
-  <hr/>
-  <img src=" i miss the old crazy.png"/>
-  <hr/>
-  <img src="Andrew mugshot1.png"/>
+    <img src="I miss the old crazy.png"/>
+    <hr/>
+    <img src="pov ryland.png"/>
+    <hr/>
+    <img src="Andrew mugshot1.png"/>
+</p>
+<body> 
+    <li><a class="selected" href="index.html">Home</a></li>
+</body>
+
+
+</html>
