--- a/pictures.html
+++ b/pictures.html
@@ -1,6 +1,7 @@
 <html>
 <head>
    <title>J.L Freeza/Pictures</title>
+   <link rel="icon href="J.L freeza3.png" type="image/icon type">
 </head>
 <body>
     Pictures!
