--- a/pictures.html
+++ b/pictures.html
@@ -4,7 +4,7 @@
    <link rel="icon href="J.L freeza3.png" type="image/icon type">
 </head>
 <body>
-    Pictures!
+    Pictures! <li><a class="selected" href="index.html">Home</a></li>
 </body>
 <p>
     <img src="Andrew baby welcome to family.png"/>
@@ -15,7 +15,7 @@
     <img src="Andrew mugshot1.png"/>
 </p>
 <body> 
-    <li><a class="selected" href="index.html">Home</a></li>
+ 
 </body>
 
 
