--- a/pictures.html
+++ b/pictures.html
@@ -4,12 +4,12 @@
    <link rel="icon href="J.L freeza3.png" type="image/icon type">
 </head>
 <body>
-    Pictures! <li><a class="selected" href="index.html">Home</a></li>
+    Pictures! 
+             <li><a class="selected" href="index.html">Home</a></li>
 </body>
 <p>
     <img src="Andrew baby welcome to family.png"/>
     <img src="I miss the old crazy.png"/>
-    <hr/>
     <img src="pov ryland.png"/>
     <hr/>
     <img src="Andrew mugshot1.png"/>
