--- a/pictures.html
+++ b/pictures.html
@@ -4,7 +4,7 @@
    <link rel="icon href="J.L freeza3.png" type="image/icon type">
 </head>
 <body>
-    Pictures! 
+    <span class=“red”>cool </span>
              <li><a class="selected" href="index.html">Home</a></li>
 </body>
 <p>
