--- a/pictures.html
+++ b/pictures.html
@@ -18,6 +18,9 @@
 <body> 
  
 </body>
+                                   <div id="footer">
+                Copyright &copy; 2022 John Labrador
+                </div>
 
 
 </html>
