--- a/pictures.html
+++ b/pictures.html
@@ -4,7 +4,7 @@
    <link rel="icon href="J.L freeza3.png" type="image/icon type">
 </head>
 <body>
-   <h1> Pictures <h1/>
+   <h1> Pictures! <h1/>
              <li><a class="selected" href="index.html">Home</a></li>
 </body>
 <p>
