--- a/pictures.html
+++ b/pictures.html
@@ -6,7 +6,9 @@
 <body>
    <h1> Pictures! <h1/>
              <li><a class="selected" href="index.html">Home</a></li>
-</body>
+             <li><a class="selected" href="index.html">Home</a></li>
+             <li><a class="selected" href="index.html">Home</a></li>                                    
+</body>      <li><a class="selected" href="index.html">Home</a></li>
 <p>
     <img src="Andrew baby welcome to family.png"/>
     <img src="I miss the old crazy.png"/>
@@ -17,10 +19,11 @@
 </p>
 <body> 
  
-</body>
                                    <div id="footer">
                 Copyright &copy; 2022 John Labrador
                 </div>
+</body>
+                    
 
 
 </html>
