--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <ul>
                     <li><a class="selected" href="">Home</a></li>
                       <a href="pictures.html">pictures</a>
-                    <li><a href="">Contact</a></li>
+                    <a href="pictures.html">store</a>
                 </ul>
             </div>
 
