--- a/pictures.html
+++ b/pictures.html
@@ -6,7 +6,7 @@
 <body>
    <h1> Pictures! <h1/>
              <li><a class="selected" href="index.html">Home</a></li>
-             <li><a class="selected" href="index.html">Home</a></li>
+             <li><a class="selected" href="index.html">Store</a></li>
              <li><a class="selected" href="index.html">Home</a></li>                                    
 </body>      <li><a class="selected" href="index.html">Home</a></li>
 <p>
