--- a/store.html
+++ b/store.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>J.L Freeza/Store</title>
+    <link rel="stylesheet" type="text/css" href="store.css
     <link rel="icon href="J.L freeza3.png" type="image/icon type ="image/x-icon">
   </head>
   <body>
