--- a/pictures.html
+++ b/pictures.html
@@ -6,9 +6,9 @@
 <body>
    <h1> Pictures! <h1/>
              <li><a class="selected" href="index.html">Home</a></li>
-             <li><a class="selected" href="store.html">Store</a></li>
-             <li><a class="selected" href="index.html">Home</a></li>                                    
-</body>      <li><a class="selected" href="index.html">Home</a></li>
+             <li><a  href="store.html">Store</a></li>
+             <li><a  href="index.html">Home</a></li>                                    
+</body>      <li><a  href="index.html">Home</a></li>
 <p>
     <img src="Andrew baby welcome to family.png"/>
     <img src="I miss the old crazy.png"/>
