--- a/store.html
+++ b/store.html
@@ -6,3 +6,6 @@
   </head>
   <body>
     <h1> Store <h1/>
+                                                                                
+                                                                                </body>
+    <h3> https://my-store-d16950.creator-spring.com/ <h3/>                                                                            
