--- a/store.html
+++ b/store.html
@@ -8,4 +8,4 @@
     <h1> Store <h1/>
                                                                                 
                                                                                 </body>
-    <h3> https://my-store-d16950.creator-spring.com/">Visit The J.L Freeza Store! <h3/>                                                                            
+    <p> https://my-store-d16950.creator-spring.com/" >Visit The J.L Freeza Store! <p/>                                                                            
