--- a/store.html
+++ b/store.html
@@ -8,4 +8,12 @@
     <h1> Store <h1/>
                                                                                 
                                                                                 </body>
-    <p> https://my-store-d16950.creator-spring.com/ ">Visit The J.L Freeza Store! </p>                                                                            
+   <body>
+        
+        <a href="https://my-store-d16950.creator-spring.com/">
+           <img alt="J.L freeza Store" src="https://www.google.com/search?q=mariocat100&sxsrf=ALiCzsZofocw4m6vBYLX77zt5aSGnv_FPQ:1661902177117&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjgjKyH3O_5AhW0AjQIHas9DOEQ_AUoA3oECAEQBQ&biw=1440&bih=820&dpr=2#imgrc=DpOCB4uz3eTbwM"
+           width=150" height="70">
+        </a>
+     </body>
+
+</html>
