--- a/store.html
+++ b/store.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1> Store <h1/>
-                <li><a class="selected" href="intex.html">Home</a></li>                                                                           
+                <li><a class="selected" href="index.html">Home</a></li>                                                                           
                                                                                 
                                                                                 </body>
    <body>
