--- a/store.html
+++ b/store.html
@@ -11,7 +11,7 @@
                                                                                 </body>
    <body>
         
-        <a href="https://my-store-d16950.creator-spring.com/">
+        <a href="https://my-store-d185fb.creator-spring.com/">
            <h2><img alt="J.L freeza Store "  </h2>
            
         </a>
