--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                     <li><a class="selected" href="">Home</a></li>
                       <a href="pictures.html">pictures</a> <br/>
                     <a href="store.html">store</a>
+                    a href="store.html">music</a>
                 </ul>
             </div>
 
