--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a class="selected" href="">Home</a></li>
                       <a href="pictures.html">pictures</a> <br/>
                     <a href="store.html">store</a>
-                    <a href="store.html">music</a>
+                  <li><a href="music.html">music</a></li> 
                 </ul>
             </div>
 
