--- a/pictures.html
+++ b/pictures.html
@@ -7,7 +7,7 @@
    <h1> Pictures! <h1/>
              <li><a class="selected" href="index.html">Home</a></li>
              <li><a  href="store.html">Store</a></li>
-             <li><a href="store.html">music</a></li>                                    
+             <li><a href="music.html">music</a></li>                                    
 </body>      <li><a  href="index.html">Home</a></li>
 <p>
     <img src="Andrew baby welcome to family.png"/>
