--- a/music.html
+++ b/music.html
@@ -12,6 +12,7 @@
    <p> 
       <audio controls>
          <source src="oneknee.mp3" type="audio/mpeg">
+          <source src="I miss the old crazy.mp3" type="audio/mpeg">
          Your browser does not support the audio element.
       </audio>
                  
