--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
                 <h3>Navigation</h3>
                 <ul>
                     <li><a class="selected" href="">Home</a></li>
-                      <a href="pictures.html">pictures</a> <br/>
-                    <a href="store.html">store</a>
-                  <li><a href="music.html">music</a></li> 
+                      <a href="pictures.html">Pictures</a> <br/>
+                    <a href="store.html">Store</a>
+                  <li><a href="music.html">Music</a></li> 
                 </ul>
             </div>
 
