--- a/store.html
+++ b/store.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h1> Store <h1/>
-                <li><a class="selected" href="index.html">Home</a></li>                                                                           
+                <li><a class="selected" href="index.html">Home</a></li>   
+               <li><a href="pictures.html">Pictures</a></li>     
+               <li><a href="music.html">Music</a></li>                                              
                                                                                 
                                                                                 </body>
    <body>
