--- a/music.html
+++ b/music.html
@@ -11,8 +11,7 @@
    
    <p> 
       <audio controls>
-         <source src="oneknee.mp3" type="audio/mpeg">
-          <source src="I miss the old crazy.mp3" type="audio/mpeg">
+         <source src="oneknee.mp3" type="audio/mpeg"
          Your browser does not support the audio element.
       </audio>
                           
@@ -22,6 +21,7 @@
        <source src="I miss the old crazy.mp3" type="audio/mpeg">
       Your browser does not support the audio element.
       </audio>
+   </p>
          
          <a href="https://soundcloud.com/mariocat-100">
             <h2><img alt="SoundCloud " </h2>
