--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <ul>
                     <li><a class="selected" href="">Home</a></li>
                       <a href="pictures.html">Pictures</a> <br/>
-                    <a href="store.html">Store</a>
-                  <li><a href="music.html">Music</a></li> 
+                    <a href="music.html">Music</a>
+                  <li><a href="store.html">Store</a></li> 
                 </ul>
             </div>
 
