--- a/music.html
+++ b/music.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    <h1> Music! </h1>
-   ,h2><li><a class="selected" href="index.html">Home </a></li>
+   <h2><li><a class="selected" href="index.html">Home </a></li>
    <li><a href="pictures.html ">Pictures </a></li>
                                <li><a href="store.html ">Store </a></li></h2>
    </body>
