--- a/music.html
+++ b/music.html
@@ -1,5 +1,9 @@
 <html>
 <head>
+   <style>
+      body {
+         background-color: pink;
+      }
 <title> J.L Freeza/Music </title>
 <link rel="icon href="J.L freeza3.png" type=img/icon type = "image/x-icon">
 <link rel=stylesheet" type=text/css href='music.css                                                                          
