--- a/music.html
+++ b/music.html
@@ -10,9 +10,9 @@
 </head>
 <body>
    <h1> Music! </h1>
-   <h2><li><a class="selected" href="index.html">Home </a></li>
+   <li><a class="selected" href="index.html">Home </a></li>
    <li><a href="pictures.html ">Pictures </a></li>
-                               <li><a href="store.html ">Store </a></li></h2>
+   <li><a href="store.html ">Store </a></li>
    </body>
    
 
