--- a/music.html
+++ b/music.html
@@ -2,7 +2,7 @@
 <head>
 <title> J.L Freeza/Music </title>
 <link rel="icon href="J.L freeza3.png" type=img/icon type = "image/x-icon">
-<link rel=stylesheet" type=text/css href='music.css                                                                          
+<link rel=stylesheet" type=text/css href="music.css                                                                          
 </head>
 <body>
    <h1> Music! </h1>
