--- a/pictures.html
+++ b/pictures.html
@@ -5,7 +5,7 @@
 </head>
 <body>
    <h1> Pictures! <h1/>
-             <li><a class="selected" href="index.html">Home</a></li>
+             <li><a href="index.html">Home</a></li>
              <li><a  href="music.html">Music</a></li>
              <li><a href="store.html">Store</a></li>                                    
 </body>      <li><a  href="index.html">Home</a></li>
