--- a/pictures.html
+++ b/pictures.html
@@ -2,6 +2,7 @@
 <head>
    <title>J.L Freeza/Pictures</title>
    <link rel="icon href="J.L freeza3.png" type="image/icon type = "image/x-icon">
+   <link rel="stylesheet" type="text/css" href="pictures.css" />
 </head>
 <body>
    <h1> Pictures! <h1/>
