--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                       <a href="pictures.html">Pictures</a> <br/>
                     <a href="music.html">Music</a>
                   <li><a href="store.html">Store</a></li> 
+                    <li><a href="store.html">Hunter's Lawn Service</a></li>
                 </ul>
             </div>
 
