--- a/HunterLawnService.html
+++ b/HunterLawnService.html
@@ -52,10 +52,10 @@
                 Lawn Mowing (Negotiable per lawn size)
               </p>
               
-              <img src="rainbowcow.jpeg"/>
-              <img src="rainbowcow.jpeg"/>
-              <img src="rainbowcow.jpeg"/>
-              <img src="rainbowcow.jpeg"/>
+              <img src="rainbowcow.jpe"/>
+              <img src="rainbowcow.jpe"/>
+              <img src="rainbowcow.jpe"/>
+              <img src="rainbowcow.jpe"/>
 
               <h2>About</h2>
             
