--- a/HunterLawnService.html
+++ b/HunterLawnService.html
@@ -15,9 +15,9 @@
                 <h3>Navigation</h3>
                 <ul>
                     <li><a class="selected" href="">Home</a></li>
-                      <a href="pictures.html">Pricing</a> <br/>
+                      <a href="pictures.htm">Pricing</a> <br/>
                     <a href="music.html"></a>
-                  <li><a href="store.html">Email</a></li> 
+                  <li><a href="store.htm">Email</a></li> 
                 </ul>
             </div>
 
