--- a/HunterLawnService.html
+++ b/HunterLawnService.html
@@ -2,7 +2,7 @@
     <head>
         <title> Hunter's Lawn Service</title>
         <link rel="stylesheet" type="text/css" href="HunterLawnService.css" />
-        <link rel="icon" href="momthing.jpg" type="image/icon type">
+        <link rel="icon" href="green hand yard services.JPG" type="image/icon type">
     </head>
     <body>
         <div id="container">
