--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="music.html">Music</a>
                   <li><a href="store.html">Store</a></li> 
                     <li><a href="HunterLawnService.html">Hunter's Lawn Service</a></li>
-                     <li><a href="store.html">Youtube to mp3 converter</a></li>
+                     <li><a href="Converter.html">Youtube to mp3 converter</a></li>
                 </ul>
             </div>
 
