--- a/Converter.html
+++ b/Converter.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>YouTube to MP3 Converter</title>
+	<script src="script.js"></script>
+</head>
+<body>
+	<h1>Convert YouTube Video to MP3</h1>
+	<form onsubmit="convertToMP3(); return false;">
+		<label>YouTube URL:</label>
+		<input type="text" id="youtube_url">
+		<input type="submit" value="Convert">
+	</form>
+	<div id="output"></div>
+</body>
+</html>
