--- a/Converter.html
+++ b/Converter.html
@@ -5,7 +5,7 @@
 	<script src="script.js"></script>
 </head>
 <body>
-	<script src="js/script.js"></script>
+	
 	<h1>Convert YouTube Video to MP3</h1>
 	<form onsubmit="convertToMP3(); return false;">
 		<label>YouTube URL:</label>
@@ -13,5 +13,10 @@
 		<input type="submit" value="Convert">
 	</form>
 	<div id="output"></div>
+	
+	 <li><a href="index.html">Home </a></li>
+   <li><a href="pictures.html ">Pictures </a></li>
+   <li><a href="store.html ">Store </a></li>
+	
 </body>
 </html>
