--- a/Converter.html
+++ b/Converter.html
@@ -5,7 +5,7 @@
 	<script src="script.js"></script>
 </head>
 <body>
-	
+	<script src="script.js"></script>
 	<h1>Convert YouTube Video to MP3</h1>
 	<form onsubmit="convertToMP3(); return false;">
 		<label>YouTube URL:</label>
