--- a/Converter.html
+++ b/Converter.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<title>YouTube to MP3 Converter</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="script.js"></script>
 </head>
 <body>
-	<script src="script.js"></script>
 	<h1>Convert YouTube Video to MP3</h1>
 	<form onsubmit="convertToMP3(); return false;">
 		<label>YouTube URL:</label>
@@ -13,10 +13,9 @@
 		<input type="submit" value="Convert">
 	</form>
 	<div id="output"></div>
-	
-	 <li><a href="index.html">Home </a></li>
+  
+  <li><a href="index.html">Home </a></li>
    <li><a href="pictures.html ">Pictures </a></li>
    <li><a href="store.html ">Store </a></li>
-	
 </body>
 </html>
