--- a/Converter.html
+++ b/Converter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>YouTube to MP3 Converter</title>
-	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="stylesheet" type="text/css" href="Converter.css" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="script.js"></script>
 </head>
