--- a/Converter.html
+++ b/Converter.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>YouTube to MP3 Converter</title>
+	  <link rel="stylesheet" type="text/css" href="Converter.css" />
   </head>
   <body>
     <h1>Convert YouTube Videos to MP3</h1>
