--- a/Converter.html
+++ b/Converter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>YouTube to MP3 Converter</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="Converter.css">
 </head>
 <body>
 	<div class="container">
