--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                   <li><a href="store.html">Store</a></li> 
                     <li><a href="HunterLawnService.html">Hunter's Lawn Service</a></li>
                      <li><a href="Converter.html">Youtube to mp3 converter</a></li>
+                    <li><a href="NameGenerator.html">Name Generator</a></li>
                 </ul>
             </div>
 
