--- a/Converter.html
+++ b/Converter.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>YouTube to MP3 Converter</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="Converter.css">
 </head>
 <body>
 	<div class="container">
@@ -14,6 +14,7 @@
 	</div>
 
 	<script src="script.js"></script>
+
 	<script>
 		const convertBtn = document.getElementById('convert-btn');
 		const audioPlayer = document.getElementById('audio-player');
