--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -5,6 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<script src="Generator.js"></script>
+	
 	<div class="container">
 		<h1>Random Generator</h1>
 		<div class="generator">
