--- a/NameGenerator.html
+++ b/NameGenerator.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Random Generator</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="Generator.css">
 </head>
 <body>
 	<script src="Generator.js"></script>
