--- a/music.html
+++ b/music.html
@@ -80,6 +80,6 @@
         <p>&copy; 2024 $antino.com. All Rights Reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="music.js"></script>
 </body>
 </html>
