--- a/music.html
+++ b/music.html
@@ -69,7 +69,7 @@
             <p>Follow me on Instagram</p>
             <div class="social-links">
                 <a href="https://www.instagram.com/jlfreeza/" target="_blank">
-                    <img src="instagram-icon.png" alt="Instagram" class="social-icon">
+                    <img src="Instagram logo.jfif" alt="Instagram" class="social-icon">
                 </a>
                 <!-- Add more Instagram links or other social media links here if needed -->
             </div>
