--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>$antino.com - My Music</title>
-    <link rel="stylesheet" href="music.css">
+    <link rel="stylesheet" href="music.css"> <!-- Ensure this path is correct -->
 </head>
 <body>
     <header>
@@ -57,7 +57,7 @@
             <div class="soundcloud-link">
                 <img src="soundcloud-logo.png" alt="SoundCloud" class="soundcloud-logo">
                 <h3>Listen on SoundCloud</h3>
-                <p><a href="https://soundcloud.com/mariocat-100" target="_blank">My SoundCloud Fr</a></p>
+                <p><a href="https://soundcloud.com/mariocat-100" target="_blank">My SoundCloud Profile</a></p>
             </div>
         </div>
     </section>
@@ -80,6 +80,6 @@
         <p>&copy; 2024 $antino.com. All Rights Reserved.</p>
     </footer>
 
-    <script src="music.js"></script>
+    <script src="music.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
