--- a/music.html
+++ b/music.html
@@ -43,13 +43,14 @@
                     </audio>
                 </div>
                 <div class="music-item">
-                    <img src="music-cover2.jpg" alt="Music Cover 2">
-                    <h3>Girl You're On My Mind</h3>
-                    <audio controls>
-                        <source src="girl_youre_on_my_mind.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                    </audio>
-                </div>
+    <img src="music-cover2.jpg" alt="Music Cover 2">
+    <h3>Girl You're On My Mind</h3>
+    <audio controls>
+        <source src="Girl You're On My Mind.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+</div>
+
                 <!-- Add more music items as needed -->
             </div>
 
