--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>$antino.com - My Music</title>
-    <link rel="stylesheet" href="music.css"> <!-- Ensure this path is correct -->
+    <link rel="stylesheet" href="style.css"> <!-- Ensure this path is correct -->
 </head>
 <body>
     <header>
@@ -14,9 +14,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="pictures.html">Pictures</a></li>
-                <li><a href="store.html">Store</a></li>
-                <!-- Removed Contact link -->
+                <li><a href="music.html">Music</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -34,17 +33,22 @@
             <h2>My Music</h2>
             <div class="music-gallery">
                 <!-- Add your music here -->
-               <div class="music-item">
-    <img src="music-cover2.jpg" alt="Music Cover 2">
-    <h3>Girl You're On My Mind</h3>
-    <audio controls>
-        <source src="Girl You're On My Mind.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-</div>
-
-
-
+                <div class="music-item">
+                    <img src="music-cover1.jpg" alt="Music Cover 1">
+                    <h3>Miss U</h3>
+                    <audio controls>
+                        <source src="music1.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
+                <div class="music-item">
+                    <img src="music-cover2.jpg" alt="Music Cover 2">
+                    <h3>Girl You're On My Mind</h3>
+                    <audio controls>
+                        <source src="Girl You're On My Mind.mp3" type="audio/mpeg">
+                        Your browser does not support the audio element.
+                    </audio>
+                </div>
                 <!-- Add more music items as needed -->
             </div>
 
@@ -65,9 +69,7 @@
             <div class="social-links">
                 <a href="https://www.instagram.com/jlfreeza/" target="_blank">
                     <img src="Instagram logo.jfif" alt="Instagram" class="social-icon">
-
                 </a>
-                <!-- Add more Instagram links or other social media links here if needed -->
             </div>
         </div>
     </section>
@@ -76,6 +78,6 @@
         <p>&copy; 2024 $antino.com. All Rights Reserved.</p>
     </footer>
 
-    <script src="music.js"></script> <!-- Link to your JavaScript file -->
+    <script src="music.js"></script>
 </body>
 </html>
