--- a/music.html
+++ b/music.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>$antino.com - My Music</title>
-    <link rel="stylesheet" href="style.css"> <!-- Ensure this path is correct -->
+    <link rel="stylesheet" href="music.css">
 </head>
 <body>
     <header>
@@ -14,8 +14,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="music.html">Music</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="pictures.html">Pictures</a></li>
+                <li><a href="store.html">Store</a></li>
+                <!-- Removed Contact link -->
             </ul>
         </nav>
     </header>
@@ -56,7 +57,7 @@
             <div class="soundcloud-link">
                 <img src="soundcloud-logo.png" alt="SoundCloud" class="soundcloud-logo">
                 <h3>Listen on SoundCloud</h3>
-                <p><a href="https://soundcloud.com/mariocat-100" target="_blank">My SoundCloud Profile</a></p>
+                <p><a href="https://soundcloud.com/mariocat-100" target="_blank">My SoundCloud Fr</a></p>
             </div>
         </div>
     </section>
@@ -70,6 +71,7 @@
                 <a href="https://www.instagram.com/jlfreeza/" target="_blank">
                     <img src="Instagram logo.jfif" alt="Instagram" class="social-icon">
                 </a>
+                <!-- Add more Instagram links or other social media links here if needed -->
             </div>
         </div>
     </section>
