--- a/music.html
+++ b/music.html
@@ -38,7 +38,7 @@
                     <img src="music-cover2.jpg" alt="Music Cover 2">
                     <h3>Girl You're On My Mind</h3>
                     <audio controls>
-                        <source src="music2.mp3" type="audio/mpeg">
+                        <source src="Girl You're On My Mind.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </div>
