--- a/music.html
+++ b/music.html
@@ -66,7 +66,7 @@
         <div class="about-content">
             <h2>About Me</h2>
             <p>JLfreeza, $antino, Lil Sood.</p>
-            <p>Follow me on Instagram</p>
+            <p>Follow me on Instagram:</p>
             <div class="social-links">
                 <a href="https://www.instagram.com/jlfreeza/" target="_blank">
                     <img src="Instagram logo.jfif" alt="Instagram" class="social-icon">
@@ -80,6 +80,6 @@
         <p>&copy; 2024 $antino.com. All Rights Reserved.</p>
     </footer>
 
-    <script src="music.js"></script> <!-- Link to your JavaScript file -->
+    <script src="music.js"></script> <!-- Ensure this path is correct -->
 </body>
 </html>
