--- a/music.html
+++ b/music.html
@@ -29,11 +29,11 @@
                 <div class="music-item">
                     <img src="music-cover1.jpg" alt="Music Cover 1">
                     <h3>Miss U</h3>
-                    <audio controls>
-                        <source src="music1.mp3" type="audio/mpeg">
-                        Your browser does not support the audio element.
-                    </audio>
-                </div>
+                   <audio controls>
+    <source src="Girl You're On My Mind.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
                 <div class="music-item">
                     <img src="music-cover2.jpg" alt="Music Cover 2">
                     <h3>Girl You're On My Mind</h3>
