--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>$antino.com - Music</title>
+    <title>$antino.com - My Music</title>
     <link rel="stylesheet" href="style.css"> <!-- Ensure this path is correct -->
 </head>
 <body>
@@ -16,10 +16,17 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="music.html">Music</a></li>
                 <li><a href="about.html">About</a></li>
-                <!-- Removed Contact link if not needed -->
             </ul>
         </nav>
     </header>
+
+    <section id="home">
+        <div class="home-content">
+            <h2>Listen to all my music :)</h2>
+            <p>Discover the latest music releases and projects by $antino.</p>
+            <button onclick="scrollToSection('music')">Listen Now</button>
+        </div>
+    </section>
 
     <section id="music">
         <div class="music-content">
@@ -38,7 +45,7 @@
                     <img src="music-cover2.jpg" alt="Music Cover 2">
                     <h3>Girl You're On My Mind</h3>
                     <audio controls>
-                        <source src="music2.mp3" type="audio/mpeg">
+                        <source src="Girl You're On My Mind.mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </div>
@@ -54,10 +61,23 @@
         </div>
     </section>
 
+    <section id="about">
+        <div class="about-content">
+            <h2>About Me</h2>
+            <p>JLfreeza, $antino, Lil Sood.</p>
+            <p>Follow me on Instagram</p>
+            <div class="social-links">
+                <a href="https://www.instagram.com/jlfreeza/" target="_blank">
+                    <img src="Instagram logo.jfif" alt="Instagram" class="social-icon">
+                </a>
+            </div>
+        </div>
+    </section>
+
     <footer>
         <p>&copy; 2024 $antino.com. All Rights Reserved.</p>
     </footer>
-</body>
-    
-</html>
 
+    <script src="music.js"></script>
+</body>
+</html>
