--- a/music.html
+++ b/music.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jlfreeza.com - My Music</title>
+    <title>J.L FREEZA.com - My Music</title>
     <link rel="stylesheet" href="music.css"> <!-- Ensure this path is correct -->
 </head>
 <body>
