--- a/music.html
+++ b/music.html
@@ -75,7 +75,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 $antino.com. All Rights Reserved.</p>
+        <p>&copy; 2024 Jlfreeza.com. All Rights Reserved.</p>
     </footer>
 
     <script src="music.js"></script>
