--- a/music.html
+++ b/music.html
@@ -42,7 +42,7 @@
                     </audio>
                 </div>
                 <div class="music-item">
-                    <img src="music-cover2.jpg" alt="Music Cover 2">
+                    <img src="IMG_7743-Copy.jpg" alt="Music Cover 2">
                     <h3>Girl You're On My Mind</h3>
                     <audio controls>
                         <source src="Girl You're On My Mind.mp3" type="audio/mpeg">
